--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="utf-8">
     <title>Nabia Hani - Portfolio</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="Free Website Template" name="keywords">
-    <meta content="Free Website Template" name="description">
+    <meta content="NH-Portfolio" name="keywords">
+    <meta content="NH-Portfolio" name="description">
 
     <!-- Favicon -->
     <link href="./img/favicon.png" rel="icon">
@@ -78,8 +78,6 @@
                         </div>
 
                         <div class="share">
-
-
                             <!-- my social links -->
                             <a href="https://www.linkedin.com/in/nabiahani/" target="_blank" class="social-links"><i
                                     class='bx bxl-linkedin-square'></i></a>
@@ -89,7 +87,6 @@
                                     class='bx bxl-instagram-alt'></i></a>
                             <a href="https://github.com/NabiaHani" class="social-links"><i
                                     class='bx bxl-github'></i></a>
-
                         </div>
 
                         <div class="hero-btn">
@@ -374,12 +371,6 @@
         </div>
     </div>
     <!-- Experience End -->
-
-
-
-
-
-
 
     <!-- Project Start -->
     <section class="projects" id="projects">
