--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
                 </div>
                 <div class="timeline-item left wow slideInRight" data-wow-delay="0.1s">
                     <div class="timeline-text">
-                        <div class="timeline-date">Nov 2023 - Present</div>
+                        <div class="timeline-date">Nov 2023 - Jan 2024</div>
                         <h2>Frontend Web Developer Intern</h2>
                         <h4>Eflex Solution - Onsite</h4>
                         <p>
@@ -366,7 +366,31 @@
                             web solutions.
                         </p>
                     </div>
+
+                    <div class="timeline-text">
+                        <div class="timeline-date">Jan 2024 - Present</div>
+                        <h2>Frontend Web Developer (Full Time)</h2>
+                        <h4>Eflex Solution - Onsite</h4>
+                        <p>
+                            During my job, I gained practical experience, enhanced my skills in web development,
+                            collaborated effectively, and reinforced my passion for creating impactful and user-friendly
+                            web solutions.
+                        </p>
+                    </div>
                 </div>
+
+                 <div class="timeline-item right wow slideInRight" data-wow-delay="0.1s">
+                    <div class="timeline-text">
+                        <div class="timeline-date">Jan 2024 - Present</div>
+                        <h2>Frontend Developement Intern</h2>
+                        <h4>Internee.pk - Remote</h4>
+                        <p>
+                            In my internship in web development, I gained fundamental expertise in the
+                            frontend development, highlighting my dedication to professional growth.
+                        </p>
+                    </div>
+                </div>
+
             </div>
         </div>
     </div>
