--- a/index.html
+++ b/index.html
@@ -406,7 +406,7 @@
                 </div>
 
                 <div class="projects-container">
-                    <div class="projects-box">
+                    <!-- <div class="projects-box">
                         <img src="./img/img 1.jpeg" alt="">
                         <div class="projects-layer">
                             <h4>Online Meal Website</h4>
@@ -414,7 +414,7 @@
                             <a href="https://online-meal-website.netlify.app/" target="_blank"><i
                                     class='bx bx-link-external'></i></a>
                         </div>
-                    </div>
+                    </div> -->
 
                     <div class="projects-box">
                         <img src="./img/img 2.jpg" alt="">
@@ -426,7 +426,7 @@
                         </div>
                     </div>
 
-                    <div class="projects-box">
+                    <!-- <div class="projects-box">
                         <img src="./img/camera.jpeg" alt="">
                         <div class="projects-layer">
                             <h4>CameraShades Website</h4>
@@ -434,7 +434,7 @@
                             <a href="https://camerashades.netlify.app/" target="_blank"><i
                                     class='bx bx-link-external'></i></a>
                         </div>
-                    </div>
+                    </div> -->
 
                     <div class="projects-box">
                         <img src="./img/img 5.jpeg" alt="">
@@ -466,7 +466,7 @@
                         </div>
                     </div>
 
-                    <div class="projects-box">
+                    <!-- <div class="projects-box">
                         <img src="./img/todo-list.jpg" alt="">
                         <div class="projects-layer">
                             <h4>Simple To-Do App List</h4>
@@ -474,9 +474,9 @@
                             <a href="https://nabiahani.github.io/to-do-list/" target="_blank"><i
                                     class='bx bx-link-external'></i></a>
                         </div>
-                    </div>
+                    </div> -->
 
-                    <div class="projects-box">
+                    <!-- <div class="projects-box">
                         <img src="./img/img-2.webp" alt="">
                         <div class="projects-layer">
                             <h4>Insta Login Page</h4>
@@ -484,7 +484,11 @@
                             <a href="https://cloneinsta-login-page.netlify.app/" target="_blank"><i
                                     class='bx bx-link-external'></i></a>
                         </div>
-                    </div>
+                    </div> -->
+                </div>
+
+                <div class="view-btn">
+                    <a href="https://github.com/NabiaHani?tab=repositories" class="btn">view all</a>
                 </div>
     </section>
     <!-- Project End -->
