--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
      <link rel="shortcut icon" href="./images/favicon.png" type="image/x-icon">
 
     <!-- CSS -->
-    <link rel="stylesheet" href="./CSS/style.css">
+    <link rel="stylesheet" href="./css/style.css">
     <title>NH-PORTFOLIO</title>
 </head>
 
@@ -356,7 +356,7 @@
     <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
 
     <!-- JS -->
-    <script src="./JS/main.js"></script>
+    <script src="./js/main.js"></script>
 </body>
 
 </html>
