--- a/index.html
+++ b/index.html
@@ -245,16 +245,16 @@
                 </div>
             </div>
 
-            <div class="portfolio-box">
+            <!-- <div class="portfolio-box">
                 <img src="./images/countdown.webp" alt="">
                 <div class="portfolio-layer">
                     <h4>Countdown Timer</h4>
                     <p>Made with HTML, CSS and JS</p>
                     <a href="https://countertimerr.netlify.app/"><i class="fa-solid fa-up-right-from-square"></i></a>
                 </div>
-            </div>
+            </div> -->
 
-            <div class="portfolio-box">
+            <!-- <div class="portfolio-box">
                 <img src="./images/temperature.jpg" alt="">
                 <div class="portfolio-layer">
                     <h4>Temperature Converter</h4>
@@ -262,9 +262,9 @@
                     <a href="https://tempeatureconverter.netlify.app/"><i
                             class="fa-solid fa-up-right-from-square"></i></a>
                 </div>
-            </div>
+            </div> -->
 
-            <div class="portfolio-box">
+            <!-- <div class="portfolio-box">
                 <img src="./images/todo list.jpeg" alt="">
                 <div class="portfolio-layer">
                     <h4>To-Do List</h4>
@@ -272,7 +272,7 @@
                     <a href="https://thunderous-malabi-185f0d.netlify.app/"><i
                             class="fa-solid fa-up-right-from-square"></i></a>
                 </div>
-            </div>
+            </div> -->
         </div>
     </section>
 
