--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
                 <a href="#" class="btn">Read More</a>
             </div>
 
-            <div class="services-box">
+            <!-- <div class="services-box">
                 <i class="fa-solid fa-code"></i>
                 <h3>Wordpress Development</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus asperiores repellendus
@@ -207,7 +207,7 @@
                     error, optio blanditiis? Lorem ipsum dolor, sit amet consectetur adipisicing elit Lorem,
                     ipsum. Lorem, ipsum dolor.</p>
                 <a href="#" class="btn">Read More</a>
-            </div>
+            </div> -->
         </div>
     </section>
 
