--- a/index.html
+++ b/index.html
@@ -107,10 +107,10 @@
                             <h3>BOOTSTRAP <span>80%</span></h3>
                             <div class="bar"><span></span></div>
                         </div>
-                        <div class="progress">
+                        <!-- <div class="progress">
                             <h3>TAILWIND CSS <span>60%</span></h3>
                             <div class="bar"><span></span></div>
-                        </div>
+                        </div> -->
                         <div class="progress">
                             <h3>SASS/SCSS <span>60%</span></h3>
                             <div class="bar"><span></span></div>
@@ -119,10 +119,10 @@
                             <h3>JAVASCRIPT <span>60%</span></h3>
                             <div class="bar"><span></span></div>
                         </div>
-                        <div class="progress">
+                        <!-- <div class="progress">
                             <h3>FIREBASE <span>40%</span></h3>
                             <div class="bar"><span></span></div>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
             </div>
@@ -140,10 +140,10 @@
                             <h3>FIGMA <span>70%</span></h3>
                             <div class="bar"><span></span></div>
                         </div>
-                        <div class="progress">
+                        <!-- <div class="progress">
                             <h3>Illustrator <span>60%</span></h3>
                             <div class="bar"><span></span></div>
-                        </div>
+                        </div> -->
                     </div>
 
 
