--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 proficiency in HTML, CSS & JavaScript. I am actively advancing my skills in ReactJS & Backend
                 technologies. I am excited to embark on a journey of creativity and learning in the field of web
                 development and look forward to sharing my progress with you..</p>
-            <a href="#" class="btn">Download CV</a>
+            <a href="./cv/nabia hani resume.pdf" class="btn">Download CV</a>
         </div>
     </section>
 
