--- a/index.html
+++ b/index.html
@@ -220,6 +220,16 @@
             <div class="portfolio-box">
                 <img src="./images/img 2.jpg" alt="">
                 <div class="portfolio-layer">
+                    <h4>Quran Player</h4>
+                    <p>Built Quran Player with Reactjs and API Integration.</p>
+                    <a href="https://quranplayer-six.vercel.app/"><i class="fa-solid fa-up-right-from-square"></i></a>
+                </div>
+            </div>
+
+        <div class="portfolio-container">
+            <div class="portfolio-box">
+                <img src="./images/img 2.jpg" alt="">
+                <div class="portfolio-layer">
                     <h4>Stylish AC Website</h4>
                     <p>Stylish AC Responsive Website with HTML and CSS</p>
                     <a href="https://almadinaac.netlify.app/"><i class="fa-solid fa-up-right-from-square"></i></a>
