--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
                 <h2 class="heading">ABOUT <span>ME</span>
                 </h2>
                 <h3>Frontend Developer</h3>
-                <p>I am Nabia Hani, a third-year Software Engineering student at
-                    Karachi University. My enthusiasm for web
+                <p>I am Nabia Hani, a final year Software Engineering student at
+                    Karachi University (UBIT). My enthusiasm for web
                     development is unwavering, and I am currently engaged in
                     MERN stack development at SMIT. Having acquired
                     proficiency in HTML, CSS & JavaScript. I am actively
@@ -193,7 +193,7 @@
                         appealing web solutions. I offer customized solutions
                         for every project to showcase the unique identity of
                         your brand.</p>
-                    <a href="#" class="btn">Read More</a>
+                    <!-- <a href="#" class="btn">Read More</a> -->
                 </div>
 
                 <div class="services-box">
@@ -204,8 +204,23 @@
                         visually attractive but also highly user-friendly.
                         By integrating user behavior insights and the latest
                         design trends, I deliver seamless and impactful
-                        experiences for your app or website </p>
-                    <a href="#" class="btn">Read More</a>
+                        experiences for your app or website. </p>
+                    <!-- <a href="#" class="btn">Read More</a> -->
+                </div>
+
+                <div class="services-box">
+                    <i class="fa-solid fa-palette"></i>
+                    <h3>Graphic Designing</h3>
+                    <p>Creating visually stunning designs that communicate your
+                        brand's story effectively. From logos and branding to
+                        social media posts and marketing materials, I specialize
+                        in crafting high-quality, creative, and impactful
+                        designs tailored
+                        to your needs, With a focus on innovation and attention
+                        to detail, I ensure every project leaves a lasting
+                        impressions.
+                    </p>
+                    <!-- <a href="#" class="btn">Read More</a> -->
                 </div>
 
                 <!-- <div class="services-box">
