--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
                 </div>
 
                 <div class="services-box">
-                    <i class="fa-solid fa-palette"></i>
+                    <i class="fa-solid fa-cedi-sign"></i>
                     <h3>Graphic Designing</h3>
                     <p>Creating visually stunning designs that communicate your
                         brand's story effectively. From logos and branding to
