--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
 
             <div class="portfolio-container">
                 <div class="portfolio-box">
-                    <img src="./images/img 2.jpg" alt>
+                    <img src="./images/Quran.jpeg" alt>
                     <div class="portfolio-layer">
                         <h4>Quran Player</h4>
                         <p>Built Quran Player with Reactjs and API
